@@ -33,6 +33,7 @@ depth: 1
  * Add development (contributing to Wagtail) documentation notes for [development on Windows](development_on_windows) (Akua Dokua Asiedu)
  * Clean up linting on legacy code and add shared util `hasOwn` in TypeScript (Loveth Omokaro)
  * Remove unnecessary box-sizing: border-box declarations in SCSS (Albina Starykova)
+ * Add full support for secondary buttons with icons in the Wagtail design system - `button bicolor button--icon button-secondary` including the `button-small` variant (Seremba Patrick)
 
 ### Bug fixes
 
